--- a/myProject/template/profile.html
+++ b/myProject/template/profile.html
@@ -1,25 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
-   {% if messages %}
-    {% for message in messages %}
-    {% if message.tags == 'error' %}
-   <div class="alert alert-danger" role="alert">
-      {{ message }}
-   </div>
-    {% endif %}
-    {% endfor %}
-   {% endif %}
 
-   {% if messages %}
-   {% for message in messages %}
-   {% if message.tags == 'success' %}
-   <div class="alert alert-success" role="alert">
-      {{ message }}
-   </div>
-   {% endif %}
-   {% endfor %}
-   {% endif %}
+
+<style>
+
+   .avatar{
+      width:200px;
+      height:200px;
+      }
+</style>
+<div class="row">
+
    <div class="col-sm-12">
       <div class="card">
          <div class="card-body">
@@ -47,7 +38,7 @@
                         <input name="last_name" type="text" class="form-control" value="{{user.last_name}}">
                      </div>
                      <div class="form-group">
-                        <label>Password</label>
+                        <label>Confirm Password</label>
                         <input name="password" type="text" class="form-control" >
                      </div>
                      <div class="form-group">
@@ -55,14 +46,35 @@
                         <input name="email" type="text" class="form-control" value="{{user.email}}" readonly>
                      </div>
                   </div>
-                  <div class="col-12 col-sm-6">
-                     <div class="form-group">
-                        <label> Profile Pic </label>
-                        <input name="profile_pic" type="file" class="form-control" >
+                  <div class="col-md-3">
+                     <div class="text-center">
+                       <img src="/{{user.profile_pic}}" class="avatar img-circle img-thumbnail" alt="avatar">
+                       <h6>Upload a different photo...</h6>
+                       
+                       <input type="file" name="profile_pic" class="form-control" value="/{{user.profile_pic}}">
                      </div>
-                  </div>
+                   </div>
                   <div class="col-12">
                      <button type="submit" class="btn btn-primary">Update Profile</button>
+                     {% if messages %}
+                     {% for message in messages %}
+                     {% if message.tags == 'error' %}
+                    <div class="alert alert-danger" role="alert">
+                       {{ message }}
+                    </div>
+                     {% endif %}
+                     {% endfor %}
+                    {% endif %}
+                 
+                    {% if messages %}
+                    {% for message in messages %}
+                    {% if message.tags == 'success' %}
+                    <div class="alert alert-success" role="alert">
+                       {{ message }}
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
                   </div>
                </div>
             </form>
