--- a/myProject/template/includes/header.html
+++ b/myProject/template/includes/header.html
@@ -63,7 +63,7 @@
                       <a href="#">
                          <div class="media">
                             <span class="avatar avatar-sm">
-                            <img class="avatar-img rounded-circle" alt="User Image" src=" {% static 'assets/img/profiles/avatar-17.jpg' %} ">
+                            <img class="avatar-img rounded-circle" alt="User Image" src=" /{{user.profile_pic}} ">
                             </span>
                             <div class="media-body">
                                <p class="noti-details"><span class="noti-title">John Hendry</span> sent a cancellation request <span class="noti-title">Apple iPhone XR</span></p>
@@ -76,7 +76,7 @@
                       <a href="#">
                          <div class="media">
                             <span class="avatar avatar-sm">
-                            <img class="avatar-img rounded-circle" alt="User Image" src=" {% static 'assets/img/profiles/avatar-13.jpg' %} ">
+                            <img class="avatar-img rounded-circle" alt="User Image" src=" /{{user.profile_pic}} ">
                             </span>
                             <div class="media-body">
                                <p class="noti-details"><span class="noti-title">Mercury Software Inc</span> added a new product <span class="noti-title">Apple MacBook Pro</span></p>
@@ -99,7 +99,7 @@
           <div class="dropdown-menu">
              <div class="user-header">
                 <div class="avatar avatar-sm">
-                   <img src=" /{{user.profile_pic}} " alt="User Image" class="avatar-img rounded-circle">
+                   <img src=" /{{user.profile_pic}}" alt="User Image" class="avatar-img rounded-circle">
                 </div>
                 <div class="user-text">
                    <h6>Ryan Taylor</h6>
