--- a/myProject/template/login.html
+++ b/myProject/template/login.html
@@ -69,7 +69,7 @@
                               <button class="btn btn-primary btn-block" type="submit">Login</button>
                            </div>
                         </form>
-                        <div class="text-center forgotpass"><a href="forgot-password.html">Forgot Password?</a></div>
+                        <div class="text-center forgotpass"><a href="#">Forgot Password?</a></div>
                         <div class="login-or">
                            <span class="or-line"></span>
                            <span class="span-or">or</span>
