add student, student list, add teacher, teacher list etc

--- a/myProject/template/includes/sidebar.html
+++ b/myProject/template/includes/sidebar.html
@@ -18,15 +18,15 @@
                   <li><a href=" {% url 'studentList' %} ">Student List</a></li>
                   <li><a href="student-details.html">Student View</a></li>
                   <li><a href=" {% url 'addStudent' %} ">Student Add</a></li>
-                  <li><a href="edit-student.html">Student Edit</a></li>
+                  <li><a href="  ">Student Edit</a></li>
                </ul>
             </li>
             <li class="submenu">
                <a href="#"><i class="fas fa-chalkboard-teacher"></i> <span> Teachers</span> <span class="menu-arrow"></span></a>
                <ul>
-                  <li><a href="teachers.html">Teacher List</a></li>
+                  <li><a href=" {% url 'teacherList' %} ">Teacher List</a></li>
                   <li><a href="teacher-details.html">Teacher View</a></li>
-                  <li><a href="add-teacher.html">Teacher Add</a></li>
+                  <li><a href=" {% url 'addTeacher' %} ">Teacher Add</a></li>
                   <li><a href="edit-teacher.html">Teacher Edit</a></li>
                </ul>
             </li>
