--- a/myProject/template/base.html
+++ b/myProject/template/base.html
@@ -14,6 +14,9 @@
       <link rel="stylesheet" href=" {% static 'assets/plugins/fontawesome/css/fontawesome.min.css' %} ">
       <link rel="stylesheet" href=" {% static 'assets/plugins/fontawesome/css/all.min.css' %} ">
       <link rel="stylesheet" href=" {% static 'assets/css/style.css' %} ">
+      <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+      <link rel="stylesheet" href="{% static 'assets/plugins/datatables/datatables.min.css' %}">
+
    </head>
    <body>
       <div class="main-wrapper">
@@ -34,6 +37,14 @@
          </div>
          
       </div>
+      <script src="{% static 'assets/plugins/datatables/datatables.min.js'%}"></script>
+      <script src="https://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#table_id').dataTable();
+    });
+</script>
+
       <script src=" {% static 'assets/js/jquery-3.6.0.min.js' %} "></script>
       <script src=" {% static 'assets/js/popper.min.js' %} "></script>
       <script src=" {% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %} "></script>
