--- a/myProject/template/myAdmin/adminhome.html
+++ b/myProject/template/myAdmin/adminhome.html
@@ -20,7 +20,7 @@
                    <i class="fas fa-user-graduate"></i>
                 </div>
                 <div class="db-info">
-                   <h3>50055</h3>
+                   <h3>{{studentCount}}</h3>
                    <h6>Students</h6>
                 </div>
              </div>
@@ -32,11 +32,11 @@
           <div class="card-body">
              <div class="db-widgets d-flex justify-content-between align-items-center">
                 <div class="db-icon">
-                   <i class="fas fa-crown"></i>
+                   <i class="fas fa-chalkboard-teacher"></i>
                 </div>
                 <div class="db-info">
-                   <h3>50+</h3>
-                   <h6>Awards</h6>
+                  <h3>{{teacherCount}}</h3>
+                   <h6>Teacher</h6>
                 </div>
              </div>
           </div>
@@ -47,10 +47,10 @@
           <div class="card-body">
              <div class="db-widgets d-flex justify-content-between align-items-center">
                 <div class="db-icon">
-                   <i class="fas fa-building"></i>
+                   <i class="fas fa-user-graduate"></i>
                 </div>
                 <div class="db-info">
-                   <h3>30+</h3>
+                  <h3>{{departmentCount}}</h3>
                    <h6>Department</h6>
                 </div>
              </div>
@@ -62,11 +62,11 @@
           <div class="card-body">
              <div class="db-widgets d-flex justify-content-between align-items-center">
                 <div class="db-icon">
-                   <i class="fas fa-file-invoice-dollar"></i>
+                   <i class="fas fa-book-reader"></i>
                 </div>
                 <div class="db-info">
-                   <h3>$505</h3>
-                   <h6>Revenue</h6>
+                   <h3>{{subjectCount}}</h3>
+                   <h6>Subject</h6>
                 </div>
              </div>
           </div>
@@ -79,25 +79,13 @@
           <div class="card-header">
              <div class="row align-items-center">
                 <div class="col-6">
-                   <h5 class="card-title">Revenue</h5>
+                   <h5 class="card-title">All Data</h5>
                 </div>
-                <div class="col-6">
-                   <ul class="list-inline-group text-right mb-0 pl-0">
-                      <li class="list-inline-item">
-                         <div class="form-group mb-0 amount-spent-select">
-                            <select class="form-control form-control-sm">
-                               <option>Today</option>
-                               <option>Last Week</option>
-                               <option>Last Month</option>
-                            </select>
-                         </div>
-                      </li>
-                   </ul>
-                </div>
+             
              </div>
           </div>
           <div class="card-body">
-             <div id="apexcharts-area"></div>
+             <div id="allDetails"></div>
           </div>
        </div>
     </div>
@@ -108,23 +96,11 @@
                 <div class="col-6">
                    <h5 class="card-title">Number of Students</h5>
                 </div>
-                <div class="col-6">
-                   <ul class="list-inline-group text-right mb-0 pl-0">
-                      <li class="list-inline-item">
-                         <div class="form-group mb-0 amount-spent-select">
-                            <select class="form-control form-control-sm">
-                               <option>Today</option>
-                               <option>Last Week</option>
-                               <option>Last Month</option>
-                            </select>
-                         </div>
-                      </li>
-                   </ul>
-                </div>
+            
              </div>
           </div>
           <div class="card-body">
-             <div id="bar"></div>
+             <div id="Student_bar"></div>
           </div>
        </div>
     </div>
@@ -272,6 +248,8 @@
     </div>
  </div>
 </div>
+
+{% include 'includes/chart.html' %}
     
 {% endblock %}
     
