--- a/myProject/template/myAdmin/editStudent.html
+++ b/myProject/template/myAdmin/editStudent.html
@@ -6,8 +6,9 @@
     <div class="col-sm-12">
        <div class="card">
           <div class="card-body">
-             <form  action=" {% url 'addStudent' %} "  method="post" enctype="multipart/form-data">
+             <form  action=" {% url 'updateStudent' %} "  method="post" enctype="multipart/form-data">
                {% csrf_token %}
+               {% for s in  student%}
                 <div class="row">
                    <div class="col-12">
                       <h5 class="form-title"><span>Add Student</span></h5>
@@ -16,27 +17,28 @@
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>First Name</label>
-                         <input value="{% for s in  student%}{{s.admin.first_name}} {% endfor %}"name="first_name" type="text" class="form-control">
-                      </div>
+                         <input value="{{s.admin.first_name}}" name="first_name" type="text" class="form-control">
+                         <input value="{{s.admin.id}}" name="student_id" type="text" class="form-control" hidden>
+                        </div>
                    </div>
                    <div class="col-12 col-sm-6">
                      <div class="form-group">
                         <label>Last Name</label>
-                        <input value="{% for s in  student%}{{s.admin.last_name}}{% endfor %} "name="last_name" type="text" class="form-control">
+                        <input value="{{s.admin.last_name}}"name="last_name" type="text" class="form-control">
                      </div>
                   </div>
 
                   <div class="col-12 col-sm-6">
                      <div class="form-group">
                         <label>Email</label>
-                        <input value="{% for s in  student%}{{s.admin.email}}{% endfor %}" name="email" type="text" class="form-control">
+                        <input value="{{s.admin.email}}" name="email" type="text" class="form-control">
                      </div>
                   </div>
                   
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>Username</label>
-                         <input value="{% for s in  student%}{{s.admin.username}}{% endfor %} "name="username"  type="text" class="form-control">
+                         <input value="{{s.admin.username}}"name="username"  type="text" class="form-control">
                       </div>
                    </div>
                    <div class="col-11 col-sm-6">
@@ -101,6 +103,7 @@
                      {% include 'includes/message.html' %}
                   </div>
                 </div>
+                {% endfor %}
              </form>
           </div>
        </div>
