--- a/myProject/template/includes/header.html
+++ b/myProject/template/includes/header.html
@@ -108,7 +108,7 @@
              </div>
              <a class="dropdown-item" href=" {% url 'myProfile' %} ">My Profile</a>
              <a class="dropdown-item" href="inbox.html">Inbox</a>
-             <a class="dropdown-item" href="login.html">Logout</a>
+             <a class="dropdown-item" href=" {% url 'loginPage' %} ">Logout</a>
           </div>
        </li>
     </ul>
