--- a/myProject/template/myAdmin/adminhome.html
+++ b/myProject/template/myAdmin/adminhome.html
@@ -74,6 +74,40 @@
     </div>
  </div>
  <div class="row">
+   <div class="col-md-12 col-lg-6">
+      <div class="card card-chart">
+         <div class="card-header">
+            <div class="row align-items-center">
+               <div class="col-6">
+                  <h5 class="card-title">Student And Teacher Data</h5>
+               </div>
+            
+            </div>
+         </div>
+         <div class="card-body">
+            <div id="Student_teacher_allDetails"></div>
+         </div>
+      </div>
+   </div>
+   <div class="col-md-12 col-lg-6">
+      <div class="card card-chart">
+         <div class="card-header">
+            <div class="row align-items-center">
+               <div class="col-6">
+                  <h5 class="card-title">Number of Students</h5>
+               </div>
+           
+            </div>
+         </div>
+         <div class="card-body">
+            <div id="Student_bar"></div>
+         </div>
+      </div>
+   </div>
+</div>
+
+
+ <div class="row">
     <div class="col-md-12 col-lg-6">
        <div class="card card-chart">
           <div class="card-header">
@@ -89,21 +123,7 @@
           </div>
        </div>
     </div>
-    <div class="col-md-12 col-lg-6">
-       <div class="card card-chart">
-          <div class="card-header">
-             <div class="row align-items-center">
-                <div class="col-6">
-                   <h5 class="card-title">Number of Students</h5>
-                </div>
-            
-             </div>
-          </div>
-          <div class="card-body">
-             <div id="Student_bar"></div>
-          </div>
-       </div>
-    </div>
+
  </div>
  <div class="row">
     <div class="col-md-6 d-flex">
